--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2509,107 +2509,107 @@ stories:
   domain: http://www.republican-eagle.com/
   link: https://www.republican-eagle.com/news/crime-and-courts/4634580-minneapolis-man-gets-nine-years-cannon-falls-home-invasion
 images:
-- name: white-house-lawn-white-house-lawn-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-three.jpg
-- name: crow-crow-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-rainbow-festival.jpg
-- name: aws-s3-stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
-- name: capital-battle-capitolbattle-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-three.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-colorful-dream.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colorful-dream.png
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-wols.jpg
-- name: paris-paris-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-dali.jpg
-- name: old-door-lock-old-door-lock-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-three.jpg
-- name: dragon-desert-desert-dragon-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
-- name: eduardo-eduardo-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-crunch-paper.jpg
-- name: catacombs-catacombs-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-propaganda-leaflets.jpg
-- name: oldhousecars-house-old-cars-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-alberto-giacometti.jpg
-- name: beach-clouds-lifeguard-beachclouds-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-plentiful.jpg
-- name: border-crossing-bordercrossing-light-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-light-dali.png
-- name: oldcabin-store-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-really-hot.jpg
-- name: dc-statue-dcstatue-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-atari-missle.jpg
-- name: old-gas-pumps-oldgaspumps-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-alberto-giacometti.jpg
-- name: border-fence-border-fence-on-hill-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-mucha-mult.jpg
-- name: miamibeach-miamibeach-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-umberto-bocc.jpg
-- name: old-granary-field-oldhouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-satan-red.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-pablo-blue.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-pablo-blue.JPG
-- name: flower-barbed-wire-flower-barbed-wire-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kand-two.jpg
-- name: old-house-oldhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-umberto-bocc.jpg
-- name: fence-fence-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colored-circuits.jpg
-- name: oldtrain-oldtrain-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-yellow-paper.jpg
-- name: death-valley-death-valley-national-park-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-wols.jpg
-- name: trucksilo-trucksilo-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dry-skin.jpg
-- name: miamibeach-miamibeach-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-rainbow-festival.jpg
-- name: border-crossing-bordercrossing-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-blocks.png
-- name: oldhousecars-house-old-cars-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-attack-planes.jpg
-- name: nyc-flag-nycflag-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colored-circuits.jpg
-- name: store-on-corner-store-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-gred-mash.jpg
-- name: gears-4882162452-fa3126b38d-b-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-nazi-poster.jpg
-- name: oldhotel-oldhotel-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-neo-instinct.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-smoking-cigarette.jpg
-- name: containership-containership-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-deep-connections.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-crunch-paper.jpg
-- name: old-granary-field-granaryfield-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-graham-sutherland.jpg
-- name: beach-rocks-beach-rocks-currents-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colored-circuits.jpg
-- name: miamibeach-miamibeach-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-sunday.jpg
-- name: amusement-park-amusement-park-2-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-aqua.jpg
-- name: death-valley-death-valley-national-park-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kand-two.jpg
-- name: crow-crow-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-far-away.jpg
-- name: blossombar-purp-paper-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purp-paper-file-00-00-50-62.jpg
-- name: birdhouse-birdhouse-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-nazi-poster.jpg
-- name: old-school-house-old-schoolhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crabapple.jpg
-- name: downtown-trucksilo-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-pablo-blue.jpg
-- name: power-lines-power-lines-empty-space-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dali-two.jpg
-- name: paris-paris-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-neo-instinct.jpg
-- name: bordercrossing-bordercrossing-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-internet-numbers.jpg
-- name: supreme-court-supremecourt-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-kandinsky-bv.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-jap-wav-pr.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-4.jpg
+- name: store-on-corner-oldcabin-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-storm.jpg
+- name: gypsymosaic-gypsy-eyes-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-ww2-color.jpg
+- name: old-granary-field-oldhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-ww2-color.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
+- name: containership-containership-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-yellow-paper.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-constitution.jpg
+- name: rockingchair-rockingchair-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-internet-numbers.jpg
+- name: oldcabin-store-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-ww2-dresden.jpg
+- name: nyc-flag-nycflag-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-granite.jpg
+- name: castle-wall-DSC-0067-blue-granite.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-granite.JPG
+- name: redondo-beach-harbor-redondo-beach-harbor-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-aqua.jpg
+- name: christianity-christianity-under-construction-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-kandinsky-bv.jpg
+- name: sand-hand-sand-hand-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-atari-asteroids.jpg
+- name: trucksilo-trucksilo-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-bright-sand.jpg
+- name: abe_lincoln_one-oily_mcoilface-file-00_00_07_91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe_lincoln_one-oily_mcoilface-file-00_00_07_91.jpg
+- name: death-valley-death-valley-national-park-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-really-hot.jpg
+- name: school-clouds-church-clouds-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-brush.jpg
+- name: status-berlin-status-berlin-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-hot-spicy.jpg
+- name: rain-princess-IMG_7788.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7788.jpg
+- name: supreme-court-supremecourt-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-graham-sutherland.jpg
+- name: oldhousecars-house-old-cars-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-propaganda-leaflets.jpg
+- name: wind-mills-windmills-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dali-two.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-matrix.jpg
+- name: catacombs-catacombs-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-pablo-blue.jpg
+- name: mistywoods-babyfoot-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dark-dali.jpg
+- name: beach-clouds-lifeguard-beachclouds-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-neo-instinct.jpg
+- name: sand-hand-sand-hand-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit.jpg
+- name: aws-s3-stories-supreme-court-statues.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-supreme-court-statues.jpg
+- name: oldsmallboat-oldsmallboat-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-purple-storm.jpg
+- name: stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+- name: supreme-court-supremecourt-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-blocks.jpg
+- name: crow_bright_sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_bright_sand.jpg
+- name: christianity-christianity-under-construction-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crabapple.jpg
+- name: christianity-christianity-under-construction-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-green-zuma.jpg
+- name: window-window-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colored-circuits.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
+- name: downtheline-downtheline-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-asteroids.jpg
+- name: machine-road-machine-road-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crunch-paper.jpg
+- name: aws-s3-stories-face-2-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-face-2-blue-circuit.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
+- name: death-valley-death-valley-national-park.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park.jpg
+- name: store-on-corner-oldcabin-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-clean-view.jpg
+- name: school-clouds-church-clouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crunch-paper.jpg
+- name: blossombar-oily-mcoilface-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-24-99.jpg
+- name: scream-IMG_E3643.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_E3643.jpg
+- name: aws-s3-stories-new-old-door-lock-2-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-old-door-lock-2-marcel-duchamp.jpg
+- name: server-cloud-server-racks-door-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-pablo-blue.jpg
+- name: old-gas-pumps-oldgaspumps-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-clean-view.jpg
 ---
 June Subscriber Promotion Winner.&nbsp;Raiderettes Come Back Against Lady Tigers To Win Championship.&nbsp;Its Take Two On The Raising Canes River Center Theater Rebid.&nbsp;Judge Stops Government Lawyers Quitting Census Question Case.&nbsp;Spring Ho Festival To Kick Off Monday.&nbsp;Logan Football Camp Gets Started Monday.&nbsp;Mosquito Spraying After Flooding.&nbsp;Daughter In Bedroom Next Door Frowns On Moms Relationship.&nbsp;
